# FixReverter-BugInjection

./: .gitignore  README.md  SSS_Final_Project_Fuzz_Bench.ipynb  experiment_example.txt
FixReverter/: Dockerfile
FixReverter/clangTools/astPatternMatcher/: APMmain.cpp  CMakeLists.txt  Pattern.h  tokenizer.cpp  tokenizer.h
FixReverter/clangTools/astPatternMatcher/GrammarLib/: Action.cpp  Action.h  ArrayAction.cpp  ArrayAction.h  CMakeLists.txt  Grammar.cpp  Grammar.h  IDAction.cpp  IDAction.h  NameAction.cpp  NameAction.h  NonTerminal.cpp  NonTerminal.h  PatternToken.cpp  PatternToken.h  State.cpp  State.h  Terminal.cpp  Terminal.h  Validator.cpp  Validator.h  test.grammar
FixReverter/clangTools/mainFuncLocator/: CMakeLists.txt  mainFuncLocator.cpp
FixReverter/clangTools/mutantLocator/: CMakeLists.txt  MLmain.cpp  Util.cpp  Util.h  nullCheckML.cpp  nullCheckML.h
FixReverter/clangTools/rewriter/: CMakeLists.txt  Operation.cpp  Operation.h  rewriter.cpp
FixReverter/clangTools/utils/: CMakeLists.txt  utils.cpp  utils.h
FixReverter/drivers/analyze/: copyworkers.py  count.py  driver.py  extract.py  getinputs.py  splitpattern.py
FixReverter/drivers/inject/: clean.py  driver.py  inject.py  manage.py  pre_snd_inject.py  preinject.py  remove.py  runapm.py
FixReverter/drivers/utils/: runtarget.py
FixReverter/phasar_plugin/: DependenceAnalyzer.cpp  DependenceAnalyzer.h  Dockerfile
FixReverter/phasar_plugin/AstPatternParser/: AstPatternParser.h
FixReverter/phasar_plugin/CodeMatcher/: CMakeLists.txt
FixReverter/phasar_plugin/DataHolders/: AstTracedVariable.h  CMakeLists.txt  GlobalDataHolder.h  TaintNode.cpp
FixReverter/phasar_plugin/FlowFunctions/: RetFlowFunction.h
FixReverter/phasar_plugin/OutputWriter/: CMakeLists.txt  OutputWriter.cpp  OutputWriter.h  SinkTracer.cpp  SinkTracer.h
FixReverter/phasar_plugin/Utils/: CMakeLists.txt  Configs.h  Logs.cpp  Utils.cpp
FixReverter/phasar_plugin/funcPrinter/: FuncPrinter.cpp  FuncPrinter.h
FixReverter/phasar_plugin_port/: CMakeLists.txt  DependenceAnalyzer.cpp  DependenceAnalyzer.h  Dockerfile
FixReverter/phasar_plugin_port/AstPatternParser/: AstPatternParser.cpp  CMakeLists.txt
FixReverter/phasar_plugin_port/CodeMatcher/: CodeMatcher.cpp  CodeMatcher.h
FixReverter/phasar_plugin_port/DataHolders/: AstTracedVariable.cpp  FuncDataHolder.h  SourceInfo.h  TaintNode.h
FixReverter/phasar_plugin_port/DataHolders/attic/: TaintNode.cpp
FixReverter/phasar_plugin_port/FlowFunctions/: CallFlowFunction.h  SummaryFlowFunction.h
FixReverter/phasar_plugin_port/OutputWriter/: OutputWriter.cpp  SinkTracer.cpp
FixReverter/phasar_plugin_port/Utils/: Logs.h  Utils.h
FixReverter/phasar_plugin_port/funcPrinter/: CMakeLists.txt  FuncPrinter.cpp  FuncPrinter.h
FixReverter/phasar_plugin_port/include/llvm-10/include/clang/Config/: config.h
FixReverter/phasar_plugin_port/include/llvm-10/include/llvm/Config/: llvm-config.h
FixReverter/phasar_plugin_port/include/llvm-10/lib/: libLTO.so.10  libc++.so.1  libunwind.so.1
FixReverter/phasar_plugin_port/include/llvm-10/lib/cmake/clang/: ClangConfig.cmake  ClangTargets-release.cmake  ClangTargets.cmake
FixReverter/phasar_plugin_port/include/llvm-10/lib/cmake/llvm/: LLVMConfig.cmake  LLVMExports-release.cmake  LLVMExports.cmake
programs/binutils-fuzz_cxxfilt/clang/: FixReverter.config  build.sh  build_cov.sh  compile_commands.json  fuzz_cxxfilt.c  setup.sh
programs/binutils-fuzz_cxxfilt/inject_products/: inject.json
programs/binutils-fuzz_cxxfilt/phasar/: build.sh  fuzz_cxxfilt.c
programs/binutils-fuzz_disassemble/clang/: FixReverter.config  build.sh  build_cov.sh  pre_build.patch  setup.sh
programs/binutils-fuzz_disassemble/inject_products/: inject.json
programs/binutils-fuzz_disassemble/phasar/: build.sh  run_phasar.sh
programs/curl/clang/: FixReverter.config  build.sh  build_cov.sh  check_data.patch  checksrc.patch  install_curl.sh  setup.sh
programs/curl/inject_products/: apm.json  inject.json
programs/curl/phasar/: build.sh  run_phasar.sh
programs/lcms/clang/: FixReverter.config  build.sh  build_cov.sh  setup.sh
programs/lcms/inject_products/: apm.json  inject.json
programs/lcms/phasar/: build.sh
programs/libpcap/clang/: FixReverter.config  build.sh  build_cov.sh  setup.sh
programs/libpcap/inject_products/: apm.json  inject.json
programs/libpcap/phasar/: .psrFuzzingEngine.o.bc  build.sh  psr_driver.c  run_phasar.sh
programs/libxml2_reader/clang/: FixReverter.config  build.sh  build_cov.sh  setup.sh
programs/libxml2_reader/phasar/: build.sh
programs/libxml2_xml/clang/: FixReverter.config  build.sh  build_cov.sh  setup.sh
programs/libxml2_xml/inject_products/: inject.json
programs/libxml2_xml/phasar/: build.sh
programs/proj4/clang/: FixReverter.config  build.sh  build_cov.sh  setup.sh
programs/proj4/inject_products/: apm.json  inject.json
scripts/: count_pattern.py
(+229 files in other folders)
